Add Full Stack repo.